examples/test/testpolicy15844.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15844
  namespace: namespace8
spec:
  podSelector:
    matchLabels:
      key27: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value14
          key48: value20
      podSelector:
        matchLabels:
          key18: value45
          key43: value42
          key5: value13
